<resources>
    <string name="app_name">Belajar 5 Dasar</string>
    <string name="title_activity_alphabet">Alphabet</string>
    <string name="title_activity_angka">Angka</string>
    <string name="title_activity_buah">Buah</string>
    <string name="title_activity_warna">Warna</string>
    <string name="title_activity_hijaiyah">Hijaiyah</string>
    <string name="action_pemesanan">Pesan CD</string>
    <string name="kurang">Uangnya Kurang Brooo . . .</string>
    <string name="alphabet">Belajar Huruf Alphabhet</string>
    <string name="angka">Belajar Angka</string>
    <string name="buah">Belajar Mengenal Buah</string>
    <string name="hijaiyah">Belajar Huruf Hijaiyah</string>
    <string name="warna">Belajar Mengenal Warna</string>
    <string name="about">About</string>
    <string name="rate">Rate</string>
    <string name="more_app">More Apps</string>
    <string name="about_deskripsi">Adalah aplikasi untuk membantu balita belajar 5 dasar pengetahuan.</string>
    <string name="quiz_tebak">Quiz Tebak Gambar</string>
    <string name="alpukat">Alpukat</string>
    <string name="apel">Apel</string>
    <string name="biru">Biru</string>
    <string name="anggur">Anggur</string>
    <string name="imageTebak">ImageView Quiz</string>
    <string name="start_quiz_buah">Mulai Quiz Tebak Buah</string>
    <string name="nanas">Nanas</string>
    <string name="durian">Durian</string>
    <string name="tomat">Tomat</string>
    <string name="chery">Chery</string>
    <string name="manggis">Manggis</string>
    <string name="strawberry">Strawberry</string>
    <string name="jambu_air">Jambu Air</string>
    <string name="semangka">Semangka</string>
    <string name="selesai">Selesai</string>
    <string name="message_finish">Selamat anda telah menyelesaikan game</string>
    <string name="ke_menu">Kembali ke Menu</string>
    <string name="ulangi_game">Main Lagi</string>
    <string name="keluar">Yakin ingin membatalkan quiz ?</string>
    <string name="batal">Batalkan</string>
</resources>
