<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/quiz"
    tools:context="com.arjava.limadasaran.QuizTebakBuah">

    <ImageView
        android:id="@+id/imageViewQuiz"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/imageTebak"
        android:src="@drawable/anggur"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/layoutPilihanA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageViewQuiz"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabPilihanA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@color/colorAccent"
            android:src="@drawable/ic_music_note_white_24dp" />

        <android.support.v7.widget.CardView
            android:id="@+id/cardQuizA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/cardview_dark_background"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

            <Button
                android:id="@+id/btnPilihanA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/alpukat"
                android:textAlignment="center"
                android:textColor="@color/white" />

        </android.support.v7.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutPilihanB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutPilihanA"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center_vertical">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabPilihanB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@color/colorAccent"
            android:src="@drawable/ic_music_note_white_24dp" />

        <android.support.v7.widget.CardView
            android:id="@+id/cardQuizB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/cardview_dark_background"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

            <Button
                android:id="@+id/btnPilihanB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/apel"
                android:textAlignment="center"
                android:textColor="@color/white" />

        </android.support.v7.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutPilihanC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutPilihanB"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center_vertical">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabPilihanC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:src="@drawable/ic_music_note_white_24dp" />

        <android.support.v7.widget.CardView
            android:id="@+id/cardQuizC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/cardview_dark_background"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

            <Button
                android:id="@+id/btnPilihanC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/anggur"
                android:textAlignment="center"
                android:textColor="@color/white" />

        </android.support.v7.widget.CardView>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabSoundAsk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:padding="@dimen/fab_quiz_ask"
        android:src="@drawable/ic_volume_up_white_24dp"
        app:fabSize="normal" />

</RelativeLayout>
